修改了格式，适配下标基线相同

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -38,7 +38,7 @@ Algebra\\}
 \tableofcontents
 
 
-\include{chapter/etale-space}
+%\include{chapter/etale-space}
 %\include{chapter/naive-number-theory}
 %\include{chapter/Boolean}
 %\include{chapter/Group}
@@ -61,9 +61,8 @@ Algebra\\}
 %\include{chapter/topo}
 %\include{chapter/ring}
 %\include{chapter/commutative-algebra}
-%\include{chapter/sheaf}
-%\include{chapter/scheme}
-
+\include{chapter/sheaf}
+\include{chapter/scheme}
 \end{document}
 
 
