--- a/documentpre.tex
+++ b/documentpre.tex
@@ -36,6 +36,8 @@
 \usepackage{titletoc}%定义目录样式
 \usepackage{sectsty}%定义section的格式
 \usepackage{booktabs}
+\usepackage{easybmat}%定义大型分块矩阵
+\usepackage{dsfont}%定义bold 1
 \usepackage[
 ordering=Kac,
 edge-length=1cm,
