--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -61,7 +61,7 @@ Algebra\\}
 %\include{chapter/topo}
 %\include{chapter/ring}
 %\include{chapter/commutative-algebra}
-\include{chapter/sheaf}
+%\include{chapter/sheaf}
 \include{chapter/scheme}
 \end{document}
 
