增加了无穷范畴的simplicial set的部分， 进度1.1.3 Discrete simpliciat set

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -60,8 +60,8 @@ Algebra\\}
 
 %\include{chapter/topo}
 %\include{chapter/ring}
-%\include{chapter/commutative-algebra}
-%\include{chapter/sheaf}
+\include{chapter/commutative-algebra}
+\include{chapter/sheaf}
 \include{chapter/scheme}
 \end{document}
 
