增加了无穷范畴第一章simplicial set的内容， 进度1.1.3 Discrete simplicial set

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -20,18 +20,21 @@
 \allowdisplaybreaks
 \raggedbottom
 
+
 \special{xdvipdfmx:config z0}
 \setcounter{tocdepth}{2}
 \setcounter{secnumdepth}{4}
 %\setlist[itemize]{leftmargin=10mm}
 
+
+
 \title{Algebra}
-\author{Longer}
+\author{Xiaolong Pan}
 \begin{document}
 \begin{titlepage}
 \vspace*{5em}{\centering\Huge\usefont{T1}{qzc}{m}{it}
 Algebra\\}
-\vspace*{2em}{\centering Long\\}
+\vspace*{2em}{\centering Xiaolong Pan\\}
 \vspace*{1em}{\centering \today\\}
 \vspace*{8em}{\[\includegraphics{pictures/blowup_A2.png}\]}
 \end{titlepage}
@@ -60,9 +63,10 @@ Algebra\\}
 
 %\include{chapter/topo}
 %\include{chapter/ring}
-\include{chapter/commutative-algebra}
-\include{chapter/sheaf}
-\include{chapter/scheme}
+%\include{chapter/commutative-algebra}
+%\include{chapter/sheaf}
+%\include{chapter/scheme}
+\include{chapter/inf-category}
 \end{document}
 
 
