--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -3,6 +3,8 @@
 %\usepackage{showkeys}
 \usepackage{adjustbox}
 \usepackage{indentfirst}
+
+
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
@@ -15,8 +17,8 @@
 \newtheorem{remark}{Remark}[section]
 
 
-\setlength{\abovedisplayskip}{2mm}
-\setlength{\belowdisplayskip}{2mm}
+\setlength{\abovedisplayskip}{1mm}
+\setlength{\belowdisplayskip}{1mm}
 \allowdisplaybreaks
 \raggedbottom
 
@@ -25,7 +27,6 @@
 \setcounter{tocdepth}{2}
 \setcounter{secnumdepth}{4}
 %\setlist[itemize]{leftmargin=10mm}
-
 
 
 \title{Algebra}
@@ -40,7 +41,6 @@ Algebra\\}
 \end{titlepage}
 \tableofcontents
 
-
 %\include{chapter/etale-space}
 %\include{chapter/naive-number-theory}
 %\include{chapter/Boolean}
@@ -53,20 +53,23 @@ Algebra\\}
 %\include{chapter/representation}
 %\include{chapter/group-representation}
 %\include{chapter/Lie-alg}
-%\include{chapter/Field}
+
 %\include{chapter/alg-structure}
 %\include{chapter/linear-algebra-2}
 %\include{chapter/category}
 %\include{chapter/homological-algebra}
 %\include{chapter/dim-theory}
-%\include{chapter/Lie-alg-grp}
 
-%\include{chapter/topo}
-%\include{chapter/ring}
-%\include{chapter/commutative-algebra}
-%\include{chapter/sheaf}
-%\include{chapter/scheme}
-\include{chapter/inf-category}
+
+\include{chapter/topo}
+\include{chapter/ring}
+\include{chapter/Field}
+\include{chapter/commutative-algebra}
+%\include{chapter/Lie-alg-grp}
+\include{chapter/sheaf}
+\include{chapter/scheme}
+%\include{chapter/inf-category}
+
 \end{document}
 
 
