--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -16,9 +16,6 @@
 \newtheorem{claim}[theorem]{Claim}
 \newtheorem{remark}{Remark}[section]
 
-
-\setlength{\abovedisplayskip}{1mm}
-\setlength{\belowdisplayskip}{1mm}
 \allowdisplaybreaks
 \raggedbottom
 
@@ -61,13 +58,13 @@ Algebra\\}
 %\include{chapter/dim-theory}
 
 
-\include{chapter/topo}
+%\include{chapter/topo}
 \include{chapter/ring}
 \include{chapter/Field}
 \include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
-\include{chapter/sheaf}
-\include{chapter/scheme}
+%\include{chapter/sheaf}
+%\include{chapter/scheme}
 %\include{chapter/inf-category}
 
 \end{document}
