增加形式概型的内容

--- a/Abstract algebra.tex
+++ b/Abstract algebra.tex
@@ -18,8 +18,7 @@
 
 \allowdisplaybreaks
 \raggedbottom
-
-
+\linespread{1.15}
 \special{xdvipdfmx:config z0}
 \setcounter{tocdepth}{2}
 \setcounter{secnumdepth}{4}
@@ -58,15 +57,14 @@ Algebra\\}
 %\include{chapter/dim-theory}
 
 
-%\include{chapter/topo}
+\include{chapter/topo}
 \include{chapter/ring}
-\include{chapter/Field}
+%\include{chapter/Field}
 \include{chapter/commutative-algebra}
 %\include{chapter/Lie-alg-grp}
 %\include{chapter/sheaf}
-%\include{chapter/scheme}
+\include{chapter/scheme}
 %\include{chapter/inf-category}
-
 \end{document}
 
 
